--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@ SlipStream VPN Server</pre>
                     <h4>How It Works</h4>
                     <p><strong>1. SlipStream Client Process:</strong></p>
                     <ul>
-                        <li>Runs the native <code>slipstream-client-mac</code> or <code>slipstream-client-win.exe</code> binary</li>
+                        <li>Runs the native <code>slipstream-client-mac</code>, <code>slipstream-client-win.exe</code>, or <code>slipstream-client-linux</code> binary</li>
                         <li>Establishes SOCKS5 proxy on <code>127.0.0.1:5201</code></li>
                         <li>Handles encryption and connection to SlipStream servers</li>
                     </ul>
