feat: rename application to Stream Gate and update all associated icons and branding assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SlipStream GUI</title>
+    <title>Stream Gate</title>
     <style>
         * {
             margin: 0;
@@ -1028,7 +1028,7 @@
                 </a>
                 <button class="dns-btn" onclick="showDnsChecker()" title="DNS Checker">DNS Checker</button>
                 <button class="help-btn" onclick="showHelp()" title="Help & About">?</button>
-                <h1>🔒 SlipStream GUI</h1>
+                <h1>🔒 Stream Gate</h1>
                 <div style="margin-top: 6px;">
                     <span class="version-badge" id="versionBadge">v1.0.5</span>
                 </div>
