chore: update index.html fallback version to 1.0.1

--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
                 <button class="help-btn" onclick="showHelp()" title="Help & About">?</button>
                 <h1>🔒 Stream Gate</h1>
                 <div style="margin-top: 6px;">
-                    <span class="version-badge" id="versionBadge">v1.0.5</span>
+                    <span class="version-badge" id="versionBadge">v1.0.1</span>
                 </div>
             </div>
 
@@ -1333,7 +1333,8 @@
             <div class="modal-section">
                 <h3>Status Indicators</h3>
                 <ul>
-                    <li><strong>Stream Gate Client:</strong> Shows if the Stream Gate process is running in the background
+                    <li><strong>Stream Gate Client:</strong> Shows if the Stream Gate process is running in the
+                        background
                     </li>
                     <li><strong>HTTP Proxy:</strong> Shows if the HTTP proxy server is active (listening on
                         127.0.0.1:8080)</li>
